# eeg-simulator

./: .gitignore  LICENSE  README.md  README_EN.md  README_zh.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: 01_source_config_page.md  02_patch_manager.md  03_noise_manager.md  04_coupling_manager.md  05_signal_page.md  06_electrode_channels_page.md  07_output_page.md  08_settings_dialog.md  README.md  noise_spatial_model_todo.md  脑电仿真的意义与应用.md
eeg_simulator/: __init__.py  __main__.py
eeg_simulator/core/: __init__.py  mne_simulator.py  output_sink.py  signal_engine.py  simulator_nav.py
eeg_simulator/core/simulator/: __init__.py  app.py  buffers.py  mne.py  patch_ops.py  project.py  signal.py  simulation.py  ui.py
eeg_simulator/models/: __init__.py  coupling.py  mne_coupling.py  patch.py  signal.py
eeg_simulator/ui/: __init__.py  file_dialogs.py  styles.py  themes.py
eeg_simulator/ui/dialogs/: __init__.py  coupling_manager.py  new_project_dialog.py  noise_manager.py  (+2 more)
eeg_simulator/utils/: __init__.py  config_manager.py  i18n.py  logger.py  mne_loader.py  mri_display.py  project_manager.py  resources.py  waveform_parser.py
tests/: README.md  __init__.py  run_noise_continuity_overview.py  run_tests.py  test_channel_mapping.py  test_compare_mne.py  test_models.py  test_noise_visualization.py  test_output_sink.py  test_signal_engine.py  test_utils.py
tests/test_noise_continuity/: __init__.py  run_all.py  test_brown_noise.py  test_ecg_noise.py  test_emg_noise.py  test_eog_noise.py  test_line_noise.py  test_pink_noise.py
(+21 files in other folders)
