[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-simulator"
version = "0.1.0"
description = "EEG signal simulation platform based on PyQt6 and MNE-Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "EEG Simulator Team" }]
dependencies = [
    "PyQt6>=6.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mne>=1.0.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.5.0",
    "nibabel==5.4.0",
    "pyedflib==0.1.42",
    "pylsl>=1.16.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.scripts]
eeg-simulator = "eeg_simulator.__main__:main"

[tool.setuptools.packages.find]
include = ["eeg_simulator*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]
